--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,11 @@
     border-bottom-right-radius: 5px;
     text-decoration: none;
     color: white;
+    transition: 0.4s;
+}
+.btns:hover{
+    color: white;
+    background-image: linear-gradient(to right, purple , blue);
 }
 .slider{
     width: 525.68px;
@@ -102,4 +107,58 @@
     width: 79px;
     height: 76px;
     padding-left: 20px;
+}
+.policy-details{
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    border-radius: 8px;
+    
+}
+.policy-details:hover{
+    background-image: linear-gradient(to right, skyblue, violet);
+    border-radius: 8px;
+    transition: 0.6s ease-in;
+}
+
+/* ===Email Form=== */
+.submit{
+    outline: none;
+    border: none;
+    color: white;
+    padding: 8px 20px;
+    background-color: #3D4FF3;
+}
+.email input{
+    border: none;
+    border-bottom: 1px solid #3d4ff3;
+}
+.info-area{
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+}
+/* ===Footer==== */
+.icons {
+    font-size: 20px;
+    background-color: rgb(71, 31, 214);
+    border-radius: 30px;
+    width: 45px;
+    text-align: center;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+}
+.icons:hover{
+    background-image: linear-gradient(to right, skyblue, violet);
+    border-radius: 8px;
+    transition: 0.6s ease-in;
+}
+/* ===Footer==== */
+
+@media only screen and (max-width: 992px ) {
+    .policy-details{
+        display: flex;
+        width: 100%;
+        height: 0 auto;
+    }
+    .policy-details img{
+        width: 100%;
+        height: 0 auto;
+        padding-left: 20px;
+    }
 }
